--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
-  <title>Angular Demos</title>
+  <title>SentirBon</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
